force-app/main/default/objects/Staging_Involvement__c/Staging_Involvement__c.object-meta.xml
<CustomObject>
    <description>For ERT Registrations</description>
    <label>Staging Involvement</label>
    <nameField>
        <displayFormat>SI-{0000}</displayFormat>
        <label>Staging Involvement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staging Involvements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>