force-app/main/default/objects/Staging_Involvement__c/fields/Branch_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Branch_of_Service__c</fullName>
    <label>Branch of Service</label>
    <length>100</length>
    <type>Text</type>
</CustomField>