force-app/main/default/objects/Staging_Involvement__c/fields/Campus_Name__c.field-meta.xml
<CustomField>
    <fullName>Campus_Name__c</fullName>
    <description>To be removed</description>
    <label>Campus Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>