force-app/main/default/objects/Staging_Involvement__c/fields/Celigo_Pulled__c.field-meta.xml
<CustomField>
    <fullName>Celigo_Pulled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Celigo Pulled</label>
    <type>Checkbox</type>
</CustomField>