force-app/main/default/objects/Staging_Involvement__c/fields/Church_Address__c.field-meta.xml
<CustomField>
    <fullName>Church_Address__c</fullName>
    <label>Church Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>