force-app/main/default/objects/Staging_Involvement__c/fields/Church_Country__c.field-meta.xml
<CustomField>
    <fullName>Church_Country__c</fullName>
    <label>Church Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>