force-app/main/default/objects/Staging_Involvement__c/fields/Church_Position__c.field-meta.xml
<CustomField>
    <fullName>Church_Position__c</fullName>
    <label>Church Position</label>
    <length>100</length>
    <type>Text</type>
</CustomField>