force-app/main/default/objects/Staging_Involvement__c/fields/Church_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Church_Postal_Code__c</fullName>
    <label>Church Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>