force-app/main/default/objects/Staging_Involvement__c/fields/Church_Street_2__c.field-meta.xml
<CustomField>
    <fullName>Church_Street_2__c</fullName>
    <label>Church Street 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>