force-app/main/default/objects/Staging_Involvement__c/fields/Church_Website__c.field-meta.xml
<CustomField>
    <fullName>Church_Website__c</fullName>
    <label>Church Website</label>
    <length>255</length>
    <type>Text</type>
</CustomField>