force-app/main/default/objects/Staging_Involvement__c/fields/CM_ID__c.field-meta.xml
<CustomField>
    <fullName>CM_ID__c</fullName>
    <description>Temporary Field for Migrating Events. Can be removed after all the migration is done. Will Drive a Lookup to the campaign member for pulling data from CM to Registration and Tagging CM for archiving</description>
    <label>CM ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>