force-app/main/default/objects/Staging_Involvement__c/fields/Contact_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_External_Id__c</fullName>
    <label>Contact External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>