force-app/main/default/objects/Staging_Involvement__c/fields/Date_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Date_Cancelled__c</fullName>
    <description>ERT</description>
    <label>Date Cancelled</label>
    <type>Date</type>
</CustomField>