force-app/main/default/objects/Staging_Involvement__c/fields/Date_Check_In__c.field-meta.xml
<CustomField>
    <fullName>Date_Check_In__c</fullName>
    <description>ERT</description>
    <label>Date Check In</label>
    <type>DateTime</type>
</CustomField>