force-app/main/default/objects/Staging_Involvement__c/fields/Date_Registered__c.field-meta.xml
<CustomField>
    <fullName>Date_Registered__c</fullName>
    <description>ERT</description>
    <label>Date Registered</label>
    <type>Date</type>
</CustomField>