force-app/main/default/objects/Staging_Involvement__c/fields/Email_Subscription_List__c.field-meta.xml
<CustomField>
    <fullName>Email_Subscription_List__c</fullName>
    <description>To be removed</description>
    <label>Email Subscription List</label>
    <length>100</length>
    <type>Text</type>
</CustomField>