force-app/main/default/objects/Staging_Involvement__c/fields/Email_Subscription_Signup__c.field-meta.xml
<CustomField>
    <fullName>Email_Subscription_Signup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be removed</description>
    <label>Email Subscription Signup</label>
    <type>Checkbox</type>
</CustomField>