force-app/main/default/objects/Staging_Involvement__c/fields/ERT_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>ERT_Last_Updated__c</fullName>
    <description>ERT</description>
    <label>ERT Last Updated</label>
    <type>DateTime</type>
</CustomField>