force-app/main/default/objects/Staging_Involvement__c/fields/Ethnic_Identity__c.field-meta.xml
<CustomField>
    <fullName>Ethnic_Identity__c</fullName>
    <description>To be removed</description>
    <label>Ethnic Identity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>