force-app/main/default/objects/Staging_Involvement__c/fields/Event_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Event_External_Id__c</fullName>
    <label>Event External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>