force-app/main/default/objects/Staging_Involvement__c/fields/Event_Location__c.field-meta.xml
<CustomField>
    <fullName>Event_Location__c</fullName>
    <description>To be removed</description>
    <label>Event Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>