force-app/main/default/objects/Staging_Involvement__c/fields/Event_Sponsor_Staff_Email__c.field-meta.xml
<CustomField>
    <fullName>Event_Sponsor_Staff_Email__c</fullName>
    <label>Event Sponsor Staff Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>