force-app/main/default/objects/Staging_Involvement__c/fields/Event_Sponsor_Staff_Id__c.field-meta.xml
<CustomField>
    <fullName>Event_Sponsor_Staff_Id__c</fullName>
    <label>Event Sponsor Staff Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>