force-app/main/default/objects/Staging_Involvement__c/fields/Event_Sponsor_Staff_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Sponsor_Staff_Name__c</fullName>
    <description>Event Sponsor Staff Name</description>
    <label>Event Sponsor Staff Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>