force-app/main/default/objects/Staging_Involvement__c/fields/Failure_Info__c.field-meta.xml
<CustomField>
    <fullName>Failure_Info__c</fullName>
    <inlineHelpText>Description of what caused the record to fail import.</inlineHelpText>
    <label>Failure Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>