force-app/main/default/objects/Staging_Involvement__c/fields/FL_Registrant_Type__c.field-meta.xml
<CustomField>
    <fullName>FL_Registrant_Type__c</fullName>
    <formula>IF(RIGHT(Registrant_Type__c, 6)=&apos;Spouse&apos;,&apos;Spouse&apos;,&apos;Couple&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FL Registrant Type</label>
    <type>Text</type>
</CustomField>