force-app/main/default/objects/Staging_Involvement__c/fields/fl_Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>fl_Registration_Status__c</fullName>
    <formula>IF( NOT(ISNULL(Date_Check_In__c)), &quot;A - Attended&quot;,IF( NOT(ISNULL( Date_Cancelled__c)), &quot;X - Cancelled&quot;,&quot;C - Confirmed&quot; )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fl Registration_Status</label>
    <type>Text</type>
</CustomField>