force-app/main/default/objects/Staging_Involvement__c/fields/FL_Registration_Type__c.field-meta.xml
<CustomField>
    <fullName>FL_Registration_Type__c</fullName>
    <formula>CASE( Registrant_Type__c , 
&apos;Attendee&apos;, &apos;Attendee&apos;,
&apos;Attendee Spouse&apos;, &apos;Attendee&apos;,  
&apos;Military&apos;,&apos;Military&apos;,
&apos;Military Spouse&apos;,&apos;Military&apos;,
&apos;Pastor&apos;,&apos;Pastor&apos;,
&apos;Pastor Spouse&apos;,&apos;Pastor&apos;,
&apos;Unkown&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FL Registration Type</label>
    <type>Text</type>
</CustomField>