force-app/main/default/objects/Staging_Involvement__c/fields/GiftCardAssociatedProduct__c.field-meta.xml
<CustomField>
    <fullName>GiftCardAssociatedProduct__c</fullName>
    <label>GiftCardAssociatedProduct</label>
    <length>100</length>
    <type>Text</type>
</CustomField>