force-app/main/default/objects/Staging_Involvement__c/fields/GiftCardGlCode__c.field-meta.xml
<CustomField>
    <fullName>GiftCardGlCode__c</fullName>
    <label>GiftCardGlCode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>