force-app/main/default/objects/Staging_Involvement__c/fields/GiftCardId__c.field-meta.xml
<CustomField>
    <fullName>GiftCardId__c</fullName>
    <label>GiftCardId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>