force-app/main/default/objects/Staging_Involvement__c/fields/GiftCardValue__c.field-meta.xml
<CustomField>
    <fullName>GiftCardValue__c</fullName>
    <label>GiftCardValue</label>
    <length>50</length>
    <type>Text</type>
</CustomField>