force-app/main/default/objects/Staging_Involvement__c/fields/Household__c.field-meta.xml
<CustomField>
    <fullName>Household__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Household</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Staging Involvements</relationshipLabel>
    <relationshipName>Staging_Involvements</relationshipName>
    <type>Lookup</type>
</CustomField>