force-app/main/default/objects/Staging_Involvement__c/fields/Indicated_Gender__c.field-meta.xml
<CustomField>
    <fullName>Indicated_Gender__c</fullName>
    <description>To be removed</description>
    <label>Indicated Gender</label>
    <length>50</length>
    <type>Text</type>
</CustomField>