force-app/main/default/objects/Staging_Involvement__c/fields/Involvement_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Involvement_End_Date__c</fullName>
    <label>Involvement End Date</label>
    <type>Date</type>
</CustomField>