force-app/main/default/objects/Staging_Involvement__c/fields/Involvement_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Involvement_External_Id__c</fullName>
    <label>Involvement External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>