force-app/main/default/objects/Staging_Involvement__c/fields/Involvement_Id__c.field-meta.xml
<CustomField>
    <fullName>Involvement_Id__c</fullName>
    <label>Involvement Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>