force-app/main/default/objects/Staging_Involvement__c/fields/Involvement_Import_Status__c.field-meta.xml
<CustomField>
    <fullName>Involvement_Import_Status__c</fullName>
    <label>Involvement Import Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Matched</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>