force-app/main/default/objects/Staging_Involvement__c/fields/Involvement_Registration_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Involvement_Registration_Created_Date__c</fullName>
    <label>Involvement Registration Created Date</label>
    <type>DateTime</type>
</CustomField>