force-app/main/default/objects/Staging_Involvement__c/fields/Involvement_Registration_Type__c.field-meta.xml
<CustomField>
    <fullName>Involvement_Registration_Type__c</fullName>
    <description>Registration Type specified from external system.</description>
    <label>Involvement Registration Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>