force-app/main/default/objects/Staging_Involvement__c/fields/Involvement_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Involvement_Start_Date__c</fullName>
    <label>Involvement Start Date</label>
    <type>Date</type>
</CustomField>