force-app/main/default/objects/Staging_Involvement__c/fields/Involvement_Status__c.field-meta.xml
<CustomField>
    <fullName>Involvement_Status__c</fullName>
    <inlineHelpText>Please enter the Status.</inlineHelpText>
    <label>Involvement Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>