force-app/main/default/objects/Staging_Involvement__c/fields/Involvement_Under_18__c.field-meta.xml
<CustomField>
    <fullName>Involvement_Under_18__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies whether the registrant is under 18 years old.</description>
    <inlineHelpText>Specifies whether the registrant is under 18 years old.</inlineHelpText>
    <label>Involvement Under 18</label>
    <type>Checkbox</type>
</CustomField>