force-app/main/default/objects/Staging_Involvement__c/fields/Local_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Local_Phone_Number__c</fullName>
    <label>Local Phone Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>