force-app/main/default/objects/Staging_Involvement__c/fields/Matched_Contact__c.field-meta.xml
<CustomField>
    <fullName>Matched_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matched Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Staging Involvements</relationshipLabel>
    <relationshipName>Staging_Involvements</relationshipName>
    <type>Lookup</type>
</CustomField>