force-app/main/default/objects/Staging_Involvement__c/fields/Matched_Event__c.field-meta.xml
<CustomField>
    <fullName>Matched_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matched Event</label>
    <referenceTo>Event_Details__c</referenceTo>
    <relationshipLabel>Staging Involvements</relationshipLabel>
    <relationshipName>Staging_Involvements</relationshipName>
    <type>Lookup</type>
</CustomField>