force-app/main/default/objects/Staging_Involvement__c/fields/Matched_Involvement__c.field-meta.xml
<CustomField>
    <fullName>Matched_Involvement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matched Involvement</label>
    <referenceTo>Registration__c</referenceTo>
    <relationshipLabel>Registrations</relationshipLabel>
    <relationshipName>Staging_Involvements</relationshipName>
    <type>Lookup</type>
</CustomField>