force-app/main/default/objects/Staging_Involvement__c/fields/Previous_WTR_Attendee__c.field-meta.xml
<CustomField>
    <fullName>Previous_WTR_Attendee__c</fullName>
    <label>Previous WTR Attendee</label>
    <length>100</length>
    <type>Text</type>
</CustomField>