force-app/main/default/objects/Staging_Involvement__c/fields/Primary_Household_Id__c.field-meta.xml
<CustomField>
    <fullName>Primary_Household_Id__c</fullName>
    <label>Primary Household Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>