force-app/main/default/objects/Staging_Involvement__c/fields/Primary_Registration_Id__c.field-meta.xml
<CustomField>
    <fullName>Primary_Registration_Id__c</fullName>
    <label>Primary Registration Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>