force-app/main/default/objects/Staging_Involvement__c/fields/Referral__c.field-meta.xml
<CustomField>
    <fullName>Referral__c</fullName>
    <label>Referral</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>