force-app/main/default/objects/Staging_Involvement__c/fields/Registrant_Type__c.field-meta.xml
<CustomField>
    <fullName>Registrant_Type__c</fullName>
    <label>Registrant Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>