force-app/main/default/objects/Staging_Involvement__c/fields/Registration_Id__c.field-meta.xml
<CustomField>
    <fullName>Registration_Id__c</fullName>
    <label>Registration Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>