force-app/main/default/objects/Staging_Involvement__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Role field on the Enrollment layout for indicating the Enrollee&apos;s Role.</description>
    <inlineHelpText>Is the Enrollee a Leader or a Participant?</inlineHelpText>
    <label>Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>