force-app/main/default/objects/Staging_Involvement__c/fields/SMS_Keyword__c.field-meta.xml
<CustomField>
    <fullName>SMS_Keyword__c</fullName>
    <label>SMS Keyword</label>
    <length>25</length>
    <type>Text</type>
</CustomField>