force-app/main/default/objects/Staging_Involvement__c/fields/Staging_Type__c.field-meta.xml
<CustomField>
    <fullName>Staging_Type__c</fullName>
    <label>Staging Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EventGroup</fullName>
                <label>Event / Group</label>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>